@@ -211,7 +211,7 @@ org.bouncycastle.version = 1.45
 
 /org.carrot2/carrot2-mini = 3.10.3
 
-org.carrot2.morfologik.version = 1.10.0
+org.carrot2.morfologik.version = 2.0.1
 /org.carrot2/morfologik-fsa = ${org.carrot2.morfologik.version}
 /org.carrot2/morfologik-polish = ${org.carrot2.morfologik.version}
 /org.carrot2/morfologik-stemming = ${org.carrot2.morfologik.version}
