@@ -152,8 +152,12 @@ Other
 * LUCENE-6761: MatchAllDocsQuery's Scorers do not expose approximations
   anymore. (Adrien Grand)
 
-* LUCENE-6775: Improved MorfologikFilterFactory to allow loading of
-  custom dictionaries from ResourceLoader.  (Uwe Schindler)
+* LUCENE-6775, LUCENE-6833: Improved MorfologikFilterFactory to allow 
+  loading of custom dictionaries from ResourceLoader. Upgraded 
+  Morfologik to version 2.0.1. The 'dictionary' attribute has been
+  reverted back and now points at the dictionary resource to be 
+  loaded instead of the default Polish dictionary.
+  (Uwe Schindler, Dawid Weiss)
 
 * LUCENE-6797: Make GeoCircle an interface and use a factory to create
   it, to eventually handle degenerate cases (Karl Wright via Mike
